Made progress bar labels align to the right

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -52,13 +52,15 @@
                 android:layout_width="0dip">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:id="@+id/Text_CarbsGoal"
                     android:text="100"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:gravity="right"
+                    android:textAlignment="gravity" />
             </RelativeLayout>
 
         </LinearLayout>
@@ -122,11 +124,13 @@
                 android:layout_weight="0.13">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:id="@+id/Text_ProteinGoal"
-                    android:text="100" />
+                    android:text="100"
+                    android:gravity="right"
+                    android:textAlignment="gravity" />
             </RelativeLayout>
 
         </LinearLayout>
@@ -190,12 +194,14 @@
                 android:layout_weight="0.13">>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:id="@+id/Text_FatGoal"
                     android:text="100"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:textAlignment="gravity" />
             </RelativeLayout>
         </LinearLayout>
 
