----1---- Changed Carb/Protein/Fat in meals from int to float. Carb/Protein/Fat in user have remain unchanged. The total C/P/F for a meal are the base_macro * multiplier but rounded to the nearest int. Example: Before adding the Meal: Daily macros consumed where 10c, 20p, 10f Created a new Meal = Chicken, 0.0c, 33.3p, 4.7f, 100g Added the same Meal but with different amount = 45g, => multiplier = 45/100 = 0.45 Daily Meal entry = Chicken  0.0c, 33.3*0.45 = 14.985p => rounded to 15p, 4.7f*0.45 = 2.115 => rounded to 2f After adding the Meal: Daily macros consumed become 10+0 = 0c, 20 + 15 = 35p, 10 +2 = 12f ----2---- Changed serving from int to float. Made all neccessary GUI changes in order to make app functional (still need to revisit, re-evaluate and optimize them).

--- a/app/src/main/res/layout/activity_add_quick_meal.xml
+++ b/app/src/main/res/layout/activity_add_quick_meal.xml
@@ -65,7 +65,7 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:ems="5"
                 android:id="@+id/EditText_Carbs"
                 android:layout_alignParentTop="true"
@@ -92,14 +92,14 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
                 android:ems="5"
                 android:id="@+id/EditText_Protein"
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/textView"
                 android:textColor="#797979"
                 android:textAlignment="center"
-                android:hint="0" />
+                android:hint="0"
+                android:inputType="numberDecimal" />
 
         </LinearLayout>
 
@@ -119,14 +119,14 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
                 android:ems="5"
                 android:id="@+id/EditText_Fat"
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/textView3"
                 android:textColor="#797979"
                 android:textAlignment="center"
-                android:hint="0" />
+                android:hint="0"
+                android:inputType="numberDecimal" />
 
         </LinearLayout>
 
