--- a/app/src/main/res/layout/activity_macro_settings.xml
+++ b/app/src/main/res/layout/activity_macro_settings.xml
@@ -179,8 +179,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/macro_chart"
                 android:enabled="false"
                 android:editable="true"
-                android:inputType="number"
-                android:layout_marginEnd="8dp" />
+                android:layout_marginEnd="8dp"
+                android:inputType="number" />
 
             <EditText
                 android:layout_height="wrap_content"
