--- a/app/src/main/res/layout/content_add_saved_meal.xml
+++ b/app/src/main/res/layout/content_add_saved_meal.xml
@@ -16,7 +16,9 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:text="Meal Name"
@@ -61,19 +63,43 @@
             <EditText
                 android:layout_width="129dp"
                 android:layout_height="wrap_content"
-                android:inputType="number"
                 android:ems="10"
-                android:id="@+id/EditText_Portion_Quantity"
-                android:hint="Quantity" />
+                android:id="@+id/EditText_Serving_Quantity"
+                android:hint="Serving_Quantity"
+                android:inputType="numberDecimal"
+                android:layout_weight="0.03" />
 
             <TextView
-                android:text="Portion_Unit"
+                android:text="Label_Serving"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/Label_Portion_Unit"
+                android:id="@+id/Label_Serving"
                 android:layout_weight="1"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/EditText_Weight_Quantity"
+                android:layout_weight="0.03"
+                android:layout_width="129dp"
+                android:hint="Weight_Quantity" />
+
+            <TextView
+                android:text="Label_Weight_Unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/Label_Weight_Unit"
+                android:layout_weight="1"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
