--- a/app/src/main/res/layout/activity_create_complex_meal.xml
+++ b/app/src/main/res/layout/activity_create_complex_meal.xml
@@ -199,8 +199,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Amount:"
-            android:id="@+id/Label_Amount"
+            android:text="Quantity:"
+            android:id="@+id/Label_Quantity"
             android:textColor="@color/text_color_selector"
             android:layout_weight="0.10" />
 
@@ -209,7 +209,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="5"
-            android:id="@+id/EditText_Amount"
+            android:id="@+id/EditText_Quantity"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/textView2"
             android:textColor="#000000"
