--- a/app/src/main/res/layout/activity_select_saved_meal.xml
+++ b/app/src/main/res/layout/activity_select_saved_meal.xml
@@ -18,14 +18,6 @@
         android:layout_alignParentStart="true">
 
         <TextView
-            android:text="Select Saved Meal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/Label_SelectSavedMeal"
-            android:textAlignment="center"
-            android:textSize="18sp" />
-
-        <TextView
             android:text="Select the meal you wish to add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,7 +30,7 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/EditText_MealSearch"
-            android:hint="Search for a Meal" />
+            android:hint="Search Meals ..." />
 
         <ListView
             android:layout_width="match_parent"
