--- a/app/src/main/res/layout/activity_view_saved_meals.xml
+++ b/app/src/main/res/layout/activity_view_saved_meals.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,34 +13,39 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:weightSum="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="8dp">
 
-        <TextView
+
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Saved Meals"
-            android:id="@+id/Label_SavedMeals"
-            android:textAlignment="center" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="(Tap to view)"
-            android:id="@+id/Label_TapToView"
-            android:textAlignment="center" />
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/EditText_MealSearch"
+            android:hint="Search Meals ..." />
 
         <ListView
-            android:layout_width="wrap_content"
-            android:id="@+id/ListView_SavedMeals"
-            android:layout_height="400dp" />
+        android:layout_width="wrap_content"
+        android:id="@+id/ListView_SavedMeals"
+            android:layout_height="match_parent"
+            android:layout_weight="1.03">
+        </ListView>
 
-        <Button
-            android:text="Add New Meal"
+        <android.support.design.widget.FloatingActionButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_addnewmeal" />
+            android:clickable="true"
+            app:fabSize="mini"
+            app:srcCompat="@drawable/carbs"
+            android:id="@+id/addmeal_fab"
+            app:backgroundTint="@android:color/holo_blue_bright"
+            android:layout_gravity="right" />
+
     </LinearLayout>
+
 
 </RelativeLayout>
