Added the Search Icon and the Add New Meal Icon in View Saved Meal and Select Saved Meal

--- a/app/src/main/res/layout/activity_select_saved_meal.xml
+++ b/app/src/main/res/layout/activity_select_saved_meal.xml
@@ -30,7 +30,8 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/EditText_MealSearch"
-            android:hint="Search Meals ..." />
+            android:hint="Search Meals ..."
+            android:drawableLeft="?android:attr/actionModeWebSearchDrawable" />
 
         <ListView
             android:layout_width="match_parent"
