Added the firebase SDK and dependencies to the project Refactored some files and activities Deleted some unused files and activities Categorized some activites into packages

--- a/IIFYM_Tracker/src/main/res/layout/activity_macro_settings.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_macro_settings.xml
@@ -12,7 +12,7 @@
     android:descendantFocusability="beforeDescendants"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context="com.example.kareem.IIFYM_Tracker.Activities.MacroSettings">
+    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Settings.MacroSettings">
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
