--- a/IIFYM_Tracker/src/main/res/layout/activity_view_saved_meals.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_view_saved_meals.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activities.ViewSavedMealsActivity">
+    tools:context=".Activities.Main.ViewSavedMealsActivity">
 
     <LinearLayout
         android:orientation="vertical"
