--- a/IIFYM_Tracker/src/main/res/layout/fragment_sublogin1.xml
+++ b/IIFYM_Tracker/src/main/res/layout/fragment_sublogin1.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Signupfrag">
+    tools:context="com.example.kareem.IIFYM_Tracker.Activities.User_Login_Authentification.Signupfrag">
 
     <!-- TODO: Update blank fragment layout -->
     <ScrollView
