--- a/IIFYM_Tracker/src/main/res/layout/fragment_sublogin1.xml
+++ b/IIFYM_Tracker/src/main/res/layout/fragment_sublogin1.xml
@@ -97,6 +97,19 @@
                 app:layout_constraintLeft_toLeftOf="@+id/usernamefield"
                 android:hint="password"
                 app:layout_constraintTop_toBottomOf="@+id/usernamefield" />
+
+            <Button
+                android:text="Firebase"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/Button_Firebase"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="16dp"
+                android:layout_marginStart="24dp"
+                app:layout_constraintLeft_toRightOf="@+id/loginbtn"
+                app:layout_constraintVertical_bias="0.79" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
