--- a/IIFYM_Tracker/src/main/res/layout/activity_login.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_login.xml
@@ -1,104 +1,169 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/LightGrey"
-    android:orientation="vertical"
-    android:weightSum="4">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="@color/LoginScreen_Backgroud_Blue">
 
         <TextView
-            android:id="@+id/title_text"
+            android:text="IIFYM Tracker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email and Password" />
+            android:id="@+id/iifym_tracker_textview"
+            android:textAppearance="@android:style/TextAppearance.Material.Display1"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textColor="@color/IIFYM_LoginScreen_Blue" />
 
         <TextView
-            android:id="@+id/status"
-            android:text="Signed Out"
+            android:text="If It Fits Your Macros"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:id="@+id/iifym_subtitle_textview"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iifym_tracker_textview"
+            android:textColor="@color/IIFYM_LoginScreen_Blue" />
 
-        <TextView
-            android:id="@+id/detail"
-            tools:text="Firebase User ID: 123456789abc"
+        <ImageView
+            app:srcCompat="@drawable/iifym_logo"
+            android:id="@+id/iifym_logo_image"
+            android:layout_width="125dp"
+            android:layout_height="159dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/iifym_subtitle_textview" />
+
+        <EditText
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/color_emerald"
-        android:gravity="center_vertical">
-
-        <LinearLayout
-            android:id="@+id/email_password_fields"
-            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/email_edittext"
+            android:hint="Email"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/iifym_logo_image"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
+            android:fontFamily="sans-serif"
+            android:textColorHint="@color/IIFYM_LoginScreen_Blue"/>
 
-            <EditText
-                android:id="@+id/field_email"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Email"
-                android:inputType="textEmailAddress" />
-
-            <EditText
-                android:id="@+id/field_password"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Password"
-                android:inputType="textPassword" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/email_password_buttons"
-            android:layout_width="fill_parent"
+        <EditText
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/email_password_fields"
-            android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
-
-            <Button
-                android:id="@+id/email_sign_in_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Sign In" />
-
-            <Button
-                android:id="@+id/email_create_account_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Create Account" />
-        </LinearLayout>
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/password_textview"
+            android:hint="Password"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_edittext"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
+            android:fontFamily="sans-serif"
+            android:textColorHint="@color/IIFYM_LoginScreen_Blue"/>
 
         <Button
-            android:id="@+id/sign_out_button"
+            android:text="Register"
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/register_button"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/password_textview"
+            android:layout_marginEnd="88dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/signup_textview"
+            android:layout_marginBottom="8dp"
+            android:textColor="#192D5A"
+            android:background="@drawable/loginbutton"/>
+
+        <Button
+            android:text="Login"
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_button"
+            android:layout_marginStart="88dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/password_textview"
+            app:layout_constraintBottom_toTopOf="@+id/signup_textview"
+            android:layout_marginBottom="8dp"
+            android:textColor="#192D5A"
+            android:background="@drawable/loginbutton" />
+
+        <TextView
+            android:text="Sign Up Using"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="Sign Out"
-            android:visibility="gone" />
+            android:id="@+id/signup_textview"
+            android:textColor="@color/IIFYM_LoginScreen_Blue"
+            android:layout_marginTop="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/password_textview"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
-    </RelativeLayout>
+        <ImageButton
+            app:srcCompat="@drawable/facebook_icon"
+            android:id="@+id/facebook_signup_button"
+            android:background="@color/Transparent"
+            android:scaleType="centerCrop"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="152dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_textview"
+            app:layout_constraintBottom_toTopOf="@+id/kandy_textview"
+            android:layout_marginBottom="8dp" />
 
+        <ImageButton
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            app:srcCompat="@drawable/google_icon"
+            android:id="@+id/google_signup_button"
+            android:background="@color/Transparent"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_textview"
+            android:layout_marginEnd="152dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/kandy_textview"
+            android:layout_marginBottom="8dp" />
+
+        <TextView
+            android:text="Kandy © All Rights Reserved"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/kandy_textview"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:textAppearance="@style/TextAppearance.Design.Counter"
+            android:layout_marginTop="64dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_textview"
+            android:textColor="@color/grey_light" />
+
+    </android.support.constraint.ConstraintLayout>
 </LinearLayout>
