Changed colors and themes and image

--- a/IIFYM_Tracker/src/main/res/layout/activity_login.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/LoginScreen_Backgroud_Blue">
+        android:background="@color/LoginScreen_Backgroud">
 
         <TextView
             android:text="IIFYM Tracker"
@@ -22,7 +22,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:textColor="@color/IIFYM_LoginScreen_Blue" />
+            android:textColor="@color/colorPrimary" />
 
         <TextView
             android:text="If It Fits Your Macros"
@@ -35,7 +35,7 @@
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iifym_tracker_textview"
-            android:textColor="@color/IIFYM_LoginScreen_Blue" />
+            android:textColor="@color/colorPrimary" />
 
         <ImageView
             app:srcCompat="@drawable/iifym_logo"
@@ -64,7 +64,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
             android:fontFamily="sans-serif"
-            android:textColorHint="@color/IIFYM_LoginScreen_Blue"/>
+            android:textColorHint="@color/colorPrimary"/>
 
         <EditText
             android:layout_width="wrap_content"
@@ -73,49 +73,57 @@
             android:ems="10"
             android:id="@+id/password_textview"
             android:hint="Password"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
+            android:fontFamily="sans-serif"
+            android:textColorHint="@color/colorPrimary"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_edittext"
-            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
-            android:fontFamily="sans-serif"
-            android:textColorHint="@color/IIFYM_LoginScreen_Blue"/>
-
-        <Button
-            android:text="Register"
-            android:layout_width="95dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/register_button"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/password_textview"
-            android:layout_marginEnd="88dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/signup_textview"
-            android:layout_marginBottom="8dp"
-            android:textColor="#192D5A"
-            android:background="@drawable/loginbutton"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:text="Login"
             android:layout_width="95dp"
             android:layout_height="wrap_content"
             android:id="@+id/login_button"
-            android:layout_marginStart="88dp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:textColor="#192D5A"
+            android:background="@drawable/loginbutton"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/password_textview"
             app:layout_constraintBottom_toTopOf="@+id/signup_textview"
             android:layout_marginBottom="8dp"
+            android:layout_marginStart="96dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <Button
+            android:text="Register"
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/register_button"
             android:textColor="#192D5A"
-            android:background="@drawable/loginbutton" />
+            android:background="@drawable/loginbutton"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/password_textview"
+            app:layout_constraintBottom_toTopOf="@+id/signup_textview"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="96dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintVertical_bias="0.37" />
 
         <TextView
             android:text="Sign Up Using"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/signup_textview"
-            android:textColor="@color/IIFYM_LoginScreen_Blue"
+            android:textColor="@color/colorPrimary"
             android:layout_marginTop="80dp"
             app:layout_constraintTop_toBottomOf="@+id/password_textview"
             android:layout_marginEnd="16dp"
@@ -130,12 +138,11 @@
             android:scaleType="centerCrop"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_marginStart="152dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/signup_textview"
             app:layout_constraintBottom_toTopOf="@+id/kandy_textview"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="8dp"
+            tools:layout_editor_absoluteX="152dp" />
 
         <ImageButton
             android:layout_width="35dp"
@@ -144,10 +151,9 @@
             android:id="@+id/google_signup_button"
             android:background="@color/Transparent"
             android:scaleType="centerCrop"
+            tools:layout_editor_absoluteX="195dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/signup_textview"
-            android:layout_marginEnd="152dp"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/kandy_textview"
             android:layout_marginBottom="8dp" />
 
@@ -163,7 +169,18 @@
             android:textAppearance="@style/TextAppearance.Design.Counter"
             android:layout_marginTop="64dp"
             app:layout_constraintTop_toBottomOf="@+id/signup_textview"
-            android:textColor="@color/grey_light" />
+            android:textColor="@color/grey_light"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp" />
+
+        <android.support.constraint.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline2"
+            app:layout_constraintGuide_begin="20dp"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteY="20dp"
+            tools:layout_editor_absoluteX="0dp" />
 
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
