--- a/IIFYM_Tracker/src/main/res/layout/activity_login.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/iifym_tracker_textview"
             android:textAppearance="@android:style/TextAppearance.Material.Display1"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -41,22 +41,22 @@
             app:srcCompat="@drawable/iifym_logo"
             android:id="@+id/iifym_logo_image"
             android:layout_width="125dp"
-            android:layout_height="159dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/iifym_subtitle_textview" />
+            app:layout_constraintTop_toBottomOf="@+id/iifym_subtitle_textview"
+            android:layout_height="140dp" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:ems="10"
+            android:ems="13"
             android:id="@+id/email_edittext"
             android:hint="Email"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/iifym_logo_image"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -64,13 +64,13 @@
             app:layout_constraintRight_toRightOf="parent"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
             android:fontFamily="sans-serif"
-            android:textColorHint="@color/colorPrimary"/>
+            android:textColorHint="@color/colorPrimary" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:ems="10"
+            android:ems="13"
             android:id="@+id/password_textview"
             android:hint="Password"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
@@ -86,10 +86,10 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <Button
-            android:text="Login"
+            android:text="Register"
             android:layout_width="95dp"
             android:layout_height="wrap_content"
-            android:id="@+id/login_button"
+            android:id="@+id/Button_Register"
             android:textColor="#192D5A"
             android:background="@drawable/loginbutton"
             android:layout_marginTop="8dp"
@@ -99,13 +99,14 @@
             android:layout_marginStart="96dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.63" />
 
         <Button
-            android:text="Register"
+            android:text="Login"
             android:layout_width="95dp"
             android:layout_height="wrap_content"
-            android:id="@+id/register_button"
+            android:id="@+id/Button_Login"
             android:textColor="#192D5A"
             android:background="@drawable/loginbutton"
             android:layout_marginTop="8dp"
@@ -115,8 +116,7 @@
             android:layout_marginEnd="96dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.4"
-            app:layout_constraintVertical_bias="0.37" />
+            app:layout_constraintHorizontal_bias="0.43" />
 
         <TextView
             android:text="Sign Up Using"
@@ -142,7 +142,11 @@
             app:layout_constraintTop_toBottomOf="@+id/signup_textview"
             app:layout_constraintBottom_toTopOf="@+id/kandy_textview"
             android:layout_marginBottom="8dp"
-            tools:layout_editor_absoluteX="152dp" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.43" />
 
         <ImageButton
             android:layout_width="35dp"
@@ -151,11 +155,15 @@
             android:id="@+id/google_signup_button"
             android:background="@color/Transparent"
             android:scaleType="centerCrop"
-            tools:layout_editor_absoluteX="195dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/signup_textview"
             app:layout_constraintBottom_toTopOf="@+id/kandy_textview"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.57" />
 
         <TextView
             android:text="Kandy © All Rights Reserved"
