--- a/IIFYM_Tracker/src/main/res/menu/menu_login.xml
+++ b/IIFYM_Tracker/src/main/res/menu/menu_login.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.kareem.IIFYM_Tracker.Activities.User_Login_Authentification.Login_Abdu">
+    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Old_Login.Login_Abdu">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
