--- a/IIFYM_Tracker/src/main/res/layout/activity_edit_profile.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_edit_profile.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Settings.EditProfile">
+    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Settings.EditProfile_Mina">
 
     <TextView
         android:text="Edit Profile"
