--- a/IIFYM_Tracker/src/main/res/values/colors.xml
+++ b/IIFYM_Tracker/src/main/res/values/colors.xml
@@ -19,4 +19,7 @@
     <color name="Progress_Bar_Background">#e0e0e0</color>
     <color name="Transparent">#00ffffff</color>
     <color name="LoginScreen_Backgroud">#ffffff</color>
+    <color name="radio_button_selected_color">#ff33b5e5</color>
+    <color name="radio_button_unselected_color">#e0e0e0</color>
+    <color name="SegmentedGroup_sc_unchecked_tint_color">#D3D3D3</color>
 </resources>
