--- a/IIFYM_Tracker/src/main/res/menu/menu_home_woman.xml
+++ b/IIFYM_Tracker/src/main/res/menu/menu_home_woman.xml
@@ -4,6 +4,8 @@
     tools:context="com.example.kareem.IIFYM_Tracker.HomeActivity">
     <item android:title="Logout"
         android:id="@+id/logout_menu_btn" />
+    <item android:title="Logout (firebase)"
+        android:id="@+id/logout_firbase_menu_btn" />
     <item
         android:id="@+id/action_MacroSettings"
         android:orderInCategory="100"
